--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 jwt.secret=trademate-secret-key-please-change-this-32chars!
 jwt.access-token-exp-minutes=60
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
